@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-15T01:20:39Z",
-  "count_outdated" : 17,
-  "uniques_outdated" : 11,
+  "timestamp" : "2022-05-15T08:16:45Z",
+  "count_outdated" : 28,
+  "uniques_outdated" : 18,
   "count" : 97,
   "uniques" : 62,
   "clones" : [
-    {
-      "timestamp": "2022-05-01T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 11, 11 ],
-      "uniques": 7,
-      "uniques_minmax": [ 7, 7 ]
-    },
     {
       "timestamp": "2022-05-03T00:00:00Z",
       "count": 5,
