@@ -1,12 +1,7 @@
 {
-  "count": 80,
+  "count": 69,
   "uniques": 20,
   "clones": [
-    {
-      "timestamp": "2022-05-01T00:00:00Z",
-      "count": 11,
-      "uniques": 7
-    },
     {
       "timestamp": "2022-05-03T00:00:00Z",
       "count": 5,
