@@ -1,3 +1,10 @@
+2022-05-15T08:16:45Z:
+* notice: last 14d: all unq: 69 20
+* notice: prev accum: outdated-all outdated-unq / all unq: 17 11 / 97 62
+* notice: next accum: outdated-all outdated-unq / all unq: 28 18 / 97 62
+* notice: prev json diff / prev day diff: unq all: +0 +0 -0 -0 / +1 +1 -0 -0
+* notice: changed dates: []
+
 2022-05-15T01:20:39Z:
 * notice: last 14d: all unq: 80 20
 * notice: prev accum: outdated-all outdated-unq / all unq: 17 11 / 96 61
